load("@rules_msbuild//dotnet:defs.bzl", "msbuild_test")

# gazelle:exclude testdata

msbuild_test(
    name = "BzlTests",
    size = "small",
    srcs = ["WorkspaceMakerTests.cs"],
    data = glob(["testdata/**"]),
    target_framework = "netcoreapp3.1",
    deps = [
        "//dotnet/tools/Bzl:SamHowes.Bzl",
        "//dotnet/tools/Runfiles",
        "@nuget//FluentAssertions",
        "@nuget//Microsoft.NET.Test.Sdk",
        "@nuget//xunit",
        "@nuget//xunit.runner.visualstudio",
    ],
)
