load("@rules_msbuild//dotnet:defs.bzl", "msbuild_test")

msbuild_test(
    name = "NuGetParserTests",
    srcs = [
        "AssetsReaderTests.cs",
        "ParserTests.cs",
    ],
    content = ["project.assets.json"],
    target_framework = "net5.0",
    deps = [
        "//dotnet/tools/NuGetParser",
        "@nuget//FluentAssertions",
        "@nuget//Microsoft.NET.Test.Sdk",
        "@nuget//Moq",
        "@nuget//coverlet.collector",
        "@nuget//xunit",
        "@nuget//xunit.runner.visualstudio",
    ],
)
